--- a/demo/service.html
+++ b/demo/service.html
@@ -98,8 +98,63 @@
     <div class="main-wrap">
         <div class="main">
             <div class="main-hd">
-                <h2>标题</h2>
+                <h2>自动接待</h2> <p>客户发起聊天后，如您在线，则会收到您设置的欢迎语，如您离线，则会收到您设置的离线留言。</p>
             </div>
+
+
+            <div class="main-bd main-bd-setting">
+
+                <div class="set">
+                    <ul class="switch">
+                        <li>开启</li>
+                        <li class="on">关闭</li>
+                    </ul>
+
+                </div>
+                <ul class="form-lst">
+                    <li class="field">
+                        <label for="" class="field-tit">欢迎语：</label>
+                        <div class="field-bd">
+                            <input class="txt txt-xl" type="text" placeholder="50字以内"/>
+                        </div>
+                    </li>
+                    <li class="field">
+                        <label for="" class="field-tit">离线留言：</label>
+                        <div class="field-bd">
+                            <input class="txt txt-xl" type="text" placeholder="50字以内"/>
+                            <div class="form-error">
+                                <i class="iconfont iconfont-delete"></i>
+                                <p>邮箱格式错误，请填写正确的邮箱格式。</p>
+                            </div>
+                        </div>
+
+                    </li>
+                </ul>
+                <div class="setting-ope">
+                    <button class="btn btn-s btn-info">添加</button>
+                    <button class="btn btn-s btn-blank">修改</button>
+                </div>
+
+
+            </div>
+
+
+
+            <div class="main-hd">
+                <h2>自动常见问题推送接待</h2>
+                <p>客户发起聊天后，会自动收到您设置的常见问题。</p>
+            </div>
+            <div class="main-bd main-bd-setting">
+                <div class="set">
+                    <ul class="switch">
+                        <li>开启</li>
+                        <li class="on">关闭</li>
+                    </ul>
+
+                </div>
+            </div>
+
+
         </div>
     </div>
     <!-- S main-wrap-->
