--- a/demo/service.html
+++ b/demo/service.html
@@ -150,7 +150,38 @@
                         <li>开启</li>
                         <li class="on">关闭</li>
                     </ul>
-
+                </div>
+                <div class="fold">
+                    <div class="fold-hd">
+                        <h3>常见问题(最多可设置6条)</h3>
+                    </div>
+                    <div class="fold-bd">
+                        <table class="tb tb-hoz">
+                            <colgroup>
+                                <col/>
+                                <col width="100"/>
+                            </colgroup>
+                            <tr>
+                                <td>如何发货？</td>
+                                <td>
+                                    <a href="">修改</a>
+                                    <span class="split">|</span>
+                                    <a href="">删除</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>几天发货？</td>
+                                <td>
+                                    <a href="">修改</a>
+                                    <span class="split">|</span>
+                                    <a href="">删除</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="setting-ope">
+                    <button class="btn btn-s btn-info">添加常见问题</button>
                 </div>
             </div>
 
@@ -161,6 +192,97 @@
 
 </div>
 <!-- E header-->
+
+
+
+
+
+
+
+
+<div class="pop pop-m pop-service" style="display:block; left: 60%; top: 50px;">
+    <div class="pop-hd">
+        <h3>添加常见问题</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+
+        <div class="faq-set">
+            <ul class="form-lst">
+                <li class="field">
+                    <span class="field-tit field-tit-ta">
+                        <b class="required">*</b>
+                        问题：
+                    </span>
+                    <div class="field-bd">
+                        <input class="txt" type="text" placeholder="50字以内"/>
+                        <div class="form-error">
+                            <i class="iconfont iconfont-error"></i>
+                            报错文案以需求为准
+                        </div>
+                    </div>
+                </li>
+                <li class="field">
+                    <span class="field-tit ">
+                        <b class="required">*</b>
+                        答案：
+                    </span>
+                    <div class="field-bd">
+                        <textarea class="txtarea" name="" id="" cols="30" rows="10" placeholder="500字以内"></textarea>
+                        <p class="ta-note">0/500</p>
+                        <div class="form-error">
+                            <i class="iconfont iconfont-error"></i>
+                            报错文案以需求为准
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+
+    </div>
+
+    <div class="pop-ft">
+        <a class="btn btn-l btn-info" href="javascript:;">确定</a>
+        <a class="btn btn-l btn-default" href="javascript:;">取消</a>
+    </div>
+
+</div><!-- /添加常见问题 -->
+
+
+<div class="pop pop-tip" style="display:block; left: 60%; top: 600px;">
+    <div class="pop-hd">
+        <h3>提示</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+        <p class="tac">
+            删除后不可恢复，确认删除？
+        </p>
+    </div>
+
+    <div class="pop-ft">
+        <a class="btn btn-l btn-info" href="javascript:;">确定</a>
+        <a class="btn btn-l btn-default" href="javascript:;">取消</a>
+    </div>
+</div><!-- /提示1 -->
+
+
+<!-- S 提示弹层 -->
+<div class="bubble" style="display:block;">
+    <i class="iconfont iconfont-success"></i>
+    提交成功！
+</div>
+
+
+<div class="bubble" style="display:block;">
+    <i class="iconfont iconfont-error"></i>
+    内容含有敏感词，请重新提交！
+</div>
+
+<!-- E 提示弹层 -->
+<div class="alpha" style="display: block;"></div>
+
 
 
 
