--- a/demo/data_service.html
+++ b/demo/data_service.html
@@ -50,9 +50,6 @@
                             <a href="data_amount.html">对话量</a>
                         </li>
                         <li>
-                            <a href="data_time.html">对话时段</a>
-                        </li>
-                        <li>
                             <a href="data_area.html">客户分布</a>
                         </li>
                         <li>
@@ -319,42 +316,9 @@
                     </table>
                 </div>
                 <div class="tab-node">
-                    <table class="tb tb-border">
-                        <colgroup>
-                            <col width="100"/>
-                            <col />
-                            <col width="150"/>
-                        </colgroup>
-                        <tr>
-                            <th>排名</th>
-                            <th>产品明细</th>
-                            <th>
-                                咨询次数
-                                <div class="m-poptip">
-                                    <i class="iconfont iconfont-feedback"></i>
-                                    <div class="poptip poptip-warn">
-                                        <div class="poptip-bd">
-                                            弹出提示框
-                                        </div>
-                                        <span class="poptip-close">×</span>
-                                            <span class="arrow arrow-bottom">
-                                                <span class="arrow arrow-in"></span>
-                                            </span>
-                                    </div>
-                                </div>
-                            </th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td class="product">
-                                <a href="" target="_blank">
-                                    <img src="../img/pic_default.jpg" alt=""/>
-                                    现货供应
-                                </a>
-                            </td>
-                            <td>10</td>
-                        </tr>
-                    </table>
+                  <div class="chart">
+                      此处应有图
+                  </div>
                 </div>
             </div>
 
