--- a/demo/user_detail.html
+++ b/demo/user_detail.html
@@ -120,15 +120,6 @@
                             </div>
                         </li>
                         <li class="sch-item">
-                            <span class="sch-item-tit">内容</span>
-
-                            <div class="sch-item-bd">
-                                <input type="text" class="txt sch-input" placeholder="">
-
-
-                            </div>
-                        </li>
-                        <li class="sch-item">
                             <span class="sch-item-tit">联系客服</span>
 
                             <div class="sch-item-bd js-item-content">
@@ -150,33 +141,32 @@
             <div class="msg-wrap">
 
                 <div class="msg-record">
-                    <div class="hd">对话消息</div>
+                    <div class="hd">焦点科技股份有限公司</div>
                     <div class="bd">
 
-                        <dl class="msg">
+                        <dl class="msg msg-in">
                             <dt>老王 2017-10-10 20:00:13</dt>
                             <dd>你老公今晚加班不？</dd>
                         </dl>
 
-                        <dl class="msg">
+                        <dl class="msg msg-out">
                             <dt>小红 2017-10-10 20:00:13</dt>
                             <dd>我家大门常打开，开放怀抱等你</dd>
                         </dl>
 
+
+                        <div class="loading">
+                            努力加载中...
+                        </div>
+
                     </div>
                     <div class="msg-ft">
-                        <div class="pager-nav">
-                            <i class="iconfont iconfont-pre"></i>
-                            <i class="iconfont iconfont-arrow-left"></i>
-                            第 <input type="text" class="txt-mini"> 页/32页
-                            <i class="iconfont iconfont-arrow-right"></i>
-                            <i class="iconfont iconfont-next"></i>
-                        </div>
+                       查看更多 <i class="iconfont iconfont-arrow-btm"></i>
                     </div>
                 </div>
 
 
-                <div class="user-info">
+               <!-- <div class="user-info">
                     <div class="hd">客户信息</div>
                     <div class="bd">
                         <ul class="info-lst">
@@ -203,7 +193,7 @@
                         </ul>
                         <a class="btn btn-xl btn-info" href="">开始洽谈</a>
                     </div>
-                </div>
+                </div>-->
 
             </div>
 
